--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  @apply bg-gradient-to-tl from-neutral-900 via-neutral-800 to-zinc-900 min-h-screen;
 }
 
 h1 {
